--- a/assets/scss/_front.scss
+++ b/assets/scss/_front.scss
@@ -68,6 +68,10 @@ main {
                         justify-content: center;
                         align-items: center;
                     }
+
+                    .stars {
+                        width: fit-content;
+                    }
                 }
             }
         }
